<resources>
    <string name="app_name">Lab2AppRun</string>
    <!-- Strings related to login -->
    <string name="txtUserText">Usuario</string>
    <string name="txtPasswordText">Contraseña</string>
    <string name="btnSignInText">Ingresar</string>
    <string name="btnRegisterText">Registrarse</string>
    <string name="txtUsrRegText">Usuario</string>
    <string name="txtEmailRegHint">Correo electronico</string>
    <string name="nav_race">Carreras</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_about">Acerca de</string>
    <string name="itemNameText">Carrera</string>
    <string name="itemDistanceText">Distancia</string>
    <string name="itemDateText">Fecha</string>
    <string name="itemPlaceText">Lugar</string>
    <string name="btnCreateRaceText">Agregar Carrera</string>
    <string name="btnLogoutText">Logout</string>
    <string name="textViewText">CARRERAS</string>
    <string name="txvRCTitleText">Contacto</string>

    <string-array name="colors">
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>indigo</item>
        <item>violet</item>
        <item>aqua</item>
        <item>black</item>
        <item>fuchsia</item>
        <item>gray</item>
        <item>grey</item>
        <item>lime</item>
        <item>maroon</item>
        <item>navy</item>
        <item>olive</item>
        <item>purple</item>
        <item>silver</item>
        <item>teal</item>
        <item>white</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtRNameText">Nombre</string>
    <string name="txtRDescriptionText">Descripcion</string>
    <string name="txtRDistanceHint">Distancia (m)</string>
    <string name="txtRPlace">Lugar</string>
    <string name="txtRDateHint">Fecha</string>
    <string name="txtRCPhoneHint">Telefono</string>
    <string name="txtRCEmailHint">Correo electronico</string>
    <string name="btnRAddText">Registrar</string>
    <string name="txvRTitleText">Carrera</string>
    <string name="txvName">Nombre:</string>
    <string name="txvDesc">Descripción:</string>
    <string name="txvDist">Distancia:</string>
    <string name="txvPlace">Lugar:</string>
    <string name="txvDate">Fecha:</string>
    <string name="txvCPhone">Telefono:</string>
    <string name="txvCEmail">Correo electronico:</string>
</resources>
