<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lab2apprun.gr01.compumovil.udea.edu.co.lab2apprun.RaceInsertFragment"
    android:background="#000000"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Registrar Carrera"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtRNameText"
        android:textColor="#ffffff"
        android:textColorHint="#b7b7b7" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtRDescription"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:hint="@string/txtRDescriptionText"
        android:textColor="#ffffff"
        android:textColorHint="#b7b7b7"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtRDistance"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtRDistanceHint"
        android:textColor="#ffffff"
        android:textColorHint="#b7b7b7"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRPlace"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtRPlace"
        android:textColor="#ffffff"
        android:textColorHint="#b7b7b7"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/txtRDate"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtRDateHint"
        android:textColor="#ffffff"
        android:textColorHint="#b7b7b7"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Datos de Contacto"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#fbfbfb"
        android:textSize="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtRCPhone"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtRCPhoneHint"
        android:textColor="#ffffff"
        android:textColorHint="#b7b7b7"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtRCEmail"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtRCEmailHint"
        android:textColor="#ffffff"
        android:textColorHint="#b7b7b7"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRAddText"
        android:id="@+id/btnRAdd"
        android:layout_gravity="center_horizontal"
        android:onClick="addRace"
        />

</LinearLayout>
