<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/itemName"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/itemNameText"
        android:textSize="12sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/itemDistance"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/itemDistanceText"
        android:textSize="12sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/itemDate"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/itemDateText"
        android:textSize="12sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/itemPlace"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/itemPlaceText"
        android:textSize="12sp"
        android:textColor="#000000" />

</LinearLayout>
